# GenderNetworks_Repository

./: Dockerfile  GeographicData.ipynb  LICENSE  Makefile  README.md  data_classification.py  data_cleaning.py  docker-compose.yml  enigh_class.py  network_analysis.py  null_values.ipynb  people_per_classification.ipynb  pyproject.toml  variable_selection.py
.github/workflows/: actions.yml
data/: DataAdquisitionManual.txt  VariableClassification.csv
gender_energy_networks/: __init__.py  condor.py  data_processing_functions.py  enigh_class.py  enigh_database_class.py  get_dataframes_from_raw_data.py  household_classification.py  network_analysis_functions.py  plot_covmatrix_heatmap.py  plot_null_values.py  standardization.py  variable_selection.py
lib/: condor.py  data_processing_functions.py  enigh_class.py  network_analysis_functions.py
src/: data_classification.py  data_cleaning.py  network_analysis.py
tests/: test_data_cleaning.py  test_enigh_database_class.py  test_get_dataframes_from_raw_data.py  test_hash_figures.py
tests/data/: concentrado_data.csv  hogares_data.csv  input_plot_null_values.csv
