[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Guillermo Olvera Guerrero"
author-email = "guolg@ier.unam.mx"
description-file = "README.md"
home-page = "https://github.com/MemoOlv/GenderNetworks_Repository"
module = "gender_energy_networks"
requires-python=">=3.8"