[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Guillermo Olvera Guerrero"
author-email = "guolgue@gmail.com"
description-file = "README.md"
home-page = "https://github.com/MemoOlv/GenderNetworks_Repository"
module = "gender_energy_networks"
requires-python=">=3.8"

requires = [
    "matplotlib-stubs",
    "matplotlib",
    "networkx-stubs",
    "networkx",
    "numpy",
    "pandas-stubs",
    "pandas",
    "seaborn",
]
